   While this is not correct according to the (messy) soap specifications, it
   does make zeep more compatible with all the invalid wsdl documents out
   there. (#159)
 - Implement support for attributeGroup (#160)
 - Fix handling of Mime messages with no parts (#168)
 - Workaround an issue where soap servers don't qualify references (#170)


0.14.0 (2016-08-03)
-------------------
 - Global attributes are now always correctly handled as qualified. (#129)
 - Fix parsing xml data containing simpleContent types (#136). 
 - Set xsi:nil attribute when serializing objects to xml (#141)
 - Fix rendering choice elements when the element is mixed with other elements
   in a sequence (#150)
 - Fix maximum recursion error for recursive xsd:include elements
 - Make wsdl:import statements transitive. (#149)
 - Merge xsd:schema's which are spread around imported wsdl objects. (#146)
 - Don't raise exception when no value is given for AnyAttribute (#152)


0.13.0 (2016-07-17)
-------------------
 - Use warnings.warn() for duplicate target namespaces instead of raising an
   exception. This better matches with what lxml does.
 - **backwards-incompatible**: The ``persistent`` kwarg is removed from the
   SqliteCache.__init__() call. Use the new InMemoryCache() instead when you
   don't want to persist data. This was required to make the SqliteCache 
   backend thread-safe since we now open/close the db when writing/reading 
   from it (with an additional lock).
 - Fix zeep.helpers.serialize_object() for nested objects (#123)
 - Remove fallback between soap 1.1 and soap 1.2 namespaces during the parsing
   of the wsdl. This should not be required.


0.12.0 (2016-07-09)
-------------------
 - **backwards-incompatible**: Choice elements are now unwrapped if 
   maxOccurs=1. This results in easier operation definitions when choices are
   used. 
 - **backwards-incompatible**: The _soapheader kwarg is renamed to _soapheaders