@@ -7,6 +7,7 @@
  - Implement support for attributeGroup (#160)
  - Fix handling of Mime messages with no parts (#168)
  - Workaround an issue where soap servers don't qualify references (#170)
+ - Correctly process attributes which are passed as a dictionary.
 
 
 0.14.0 (2016-08-03)
